# limxtron1lab-main

./: README.md  pyproject.toml
exts/bipedal_locomotion/: pyproject.toml
exts/bipedal_locomotion/bipedal_locomotion/: ui_extension_example.py
exts/bipedal_locomotion/bipedal_locomotion/assets/: __init__.py
exts/bipedal_locomotion/bipedal_locomotion/assets/config/: pointfoot_cfg.py  solefoot_cfg.py  wheelfoot_cfg.py
exts/bipedal_locomotion/bipedal_locomotion/assets/usd/: .asset_hash
exts/bipedal_locomotion/bipedal_locomotion/assets/usd/PF_TRON1A/: .asset_hash  PF_TRON1A.usd  config.yaml
exts/bipedal_locomotion/bipedal_locomotion/assets/usd/SF_TRON1A/: .asset_hash  SF_TRON1A.usd  config.yaml
exts/bipedal_locomotion/bipedal_locomotion/assets/usd/WF_TRON1A/: .asset_hash  WF_TRON1A.usd  config.yaml
exts/bipedal_locomotion/bipedal_locomotion/tasks/locomotion/: __init__.py
exts/bipedal_locomotion/bipedal_locomotion/tasks/locomotion/agents/: __init__.py  limx_rsl_rl_ppo_cfg.py
exts/bipedal_locomotion/bipedal_locomotion/tasks/locomotion/cfg/: __init__.py
exts/bipedal_locomotion/bipedal_locomotion/tasks/locomotion/mdp/: __init__.py  curriculums.py  events.py  observations.py  rewards.py
exts/bipedal_locomotion/bipedal_locomotion/tasks/locomotion/robots/: __init__.py  limx_pointfoot_env_cfg.py  limx_solefoot_env_cfg.py  limx_wheelfoot_env_cfg.py
exts/bipedal_locomotion/bipedal_locomotion/utils/wrappers/rsl_rl/: __init__.py  rl_mlp_cfg.py
exts/bipedal_locomotion/config/: extension.toml
rsl_rl/: .gitignore  setup.py
rsl_rl/rsl_rl/: __init__.py
(+28 files in other folders)
